# pyarv

./: .clang-format  .format.sh  .gitignore  .pages  404.html  CMakeLists.txt  LICENSE.html  LICENSE.md  README.md  add_src_to_python_path.sh  cmake_uninstall.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
FAQs/: index.html  index.md  why_python_and_c.html  why_python_and_c.md
PyARV.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Testing/Temporary/: CTestCostData.txt
User_API/: SUMMARY.html
User_API/approximations/: index.html  polynomial_approximations.html
User_API/gaussian/: approximation.html  index.html  polynomial.html
User_API/non_central_chi_squared/: approximation.html  index.html  polynomial.html
User_API/type_hints/: arrays.html  index.html
User_API/version/: index.html
about/: index.html  index.md
contributing/: index.html  index.md
developer_notes/: .pages  advanced.html  dependencies.html  dependencies.md  deployment.html  deployment.md  documentation_conventions.html  documentation_conventions.md  faqs.html  faqs.md  getting_started.html  index.html  index.md  todo.html  upcoming_features.html  upcoming_features.md  updating_versions_and_releases_and_documentation.html  updating_versions_and_releases_and_documentation.md  why_python_and_c.html  why_python_and_c.md
developer_notes/build_instructions/: from_source.html  from_source.md  in_source.html  in_source.md  index.html  python_bindings.html  python_bindings.md
developer_reference/: SUMMARY.html
developer_reference/_approximation_utils/: approximating_polynomials.html  index.html
developer_reference/_type_hints/: arrays.html  index.html
developer_reference/_version/: index.html
developer_reference/approximations/: index.html  polynomial_approximations.html
developer_reference/gaussian/: approximation.html  index.html  polynomial.html
developer_reference/type_hints/: arrays.html  (+1 more)
docs/: advanced.html  advanced.md  colour_scheme.css  dependencies.html  faqs.html  getting_started.html  getting_started.md  todo.html  todo.md
getting_started/: .pages  an_example.html  an_example.md  dependencies.html  dependencies.md  index.html  installation.html  installation.md
lib/: index.html
misc/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  misc.c  misc.cpp  misc.py  misc2.py  module.c  module_example.py  module_headers.h  module_implementation.c
mkdoc_scripts/: generate_developer_documentation.py  generate_documentation_pages.py  generate_user_c_documentation.py  generate_user_documentation.py
release_history/: change_log.html  change_log.md  index.html  upcoming_features.html
report/: abstract.tex  advanced_usage.tex  bibliography.tex  build.sh  conclusions.tex  contents.tex  design_choices.tex  examples.tex  future_plans.tex  getting_started.tex  introduction.tex  ipes_to_pdfs.sh  mathematical_preliminaries.tex  mcode.sty  possible_journals.txt  preamble.tex  references.bib  references_acm_toms.bib  references_everything.bib  references_thesis.bib  report-1.cpt  report-10.cpt  report-11.cpt  report-12.cpt  report-13.cpt  report-14.cpt  report-15.cpt  report-2.cpt  report-3.cpt  report-4.cpt  report-5.cpt  report-6.cpt  report-7.cpt  report-8.cpt  report-9.cpt  report.aux  report.bbl  report.blg  report.out  report.tex  (+1 more)
search/: search_index.json
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  index.html
src/arv/logging/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  index.html  logging.c  logging.h  logging.hpp
src/arv/logging/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  logging.c  test_logging.c
src/arv/testing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  index.html  testing.h
src/arv/testing/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  basic_python.py  basic_python_again.py  cmake_install.cmake  example.c  index.html
src/arv/version/: CMakeLists.txt  CTestTestfile.cmake  GenerateVersionHeader.cmake  Makefile  README.md  __init__.py  cmake_install.cmake  index.html  version.c  version.h
src/arv/version/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  version.c
src/logging/: CMakeLists.txt
src/logging/demo/: CMakeLists.txt  demo.cpp
src/logging/tests/: CMakeLists.txt  logging.cpp
src/pyarv/bindings/examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  __init__.py  binding_module.c  cmake_install.cmake  examples_bindings.c  examples_bindings.h  numpy_binding_module.c  numpy_examples_bindings.c  numpy_examples_bindings.h  pybind_example.cpp  simple_binding_module.c  simple_examples_bindings.c
src/pyarv/bindings/examples/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  numpy_bindings_example.py  pybind_bindings_example.py  test_numpy_bindings_example.py  test_simple_bindings_example.py
src/pyarv/gaussian/: CMakeLists.txt  CTestTestfile.cmake  Makefile  __init__.py  approximation.py  binding_module.c  cmake_install.cmake  examples_bindings.c  gaussian_bindings.c  gaussian_bindings.h  gaussian_module.c  linear.py  polynomial.py
src/pyarv/gaussian/demos/: accuracy.py  gaussian.py  gaussian_accuracy.py  gaussian_speed.py  speed.py
src/pyarv/gaussian/tests/: CMakeLists.txt  binding_import.py  gaussian.py  test_gaussian_bindings.py
src/pyarv/non_central_chi_squared/: CMakeLists.txt  __init__.py  _approximate_non_central_chi_squared.py  _approximate_non_central_chi_squared_demonstrations.py  _table_coefficients.py  approximate_non_central_chi_squared.py  approximate_non_central_chi_squared_demonstrations.py  approximation.py  construct_table_coefficients.py  non_central_chi_squared_bindings.c  non_central_chi_squared_bindings.h  non_central_chi_squared_module.c  polynomial.py  table_coefficients.py
src/pyarv/non_central_chi_squared/demos/: accuracy.py  speed.py
src/pyarv/non_central_chi_squared/tests/: test_non_central_chi_squared_bindings.py
user_documentation/: SUMMARY.html
(+128 files in other folders)
